Improved a bit on landing page, modified fonts, fixed feature cards, fixed grid (was too narrow), added icons and side illustration as svg for better quality, added nav links and login button in small screen mode, added some comments on auth page, etc ..

--- a/src/app/features/landingpage/landingpage.component.css
+++ b/src/app/features/landingpage/landingpage.component.css
@@ -42,5 +42,4 @@ footer {
   background-color: var(--primary-color);
   color: white;
   text-align: center;
-  padding: 10px;
 }
